# Airflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Readme.md  ansible.tf  backend.tf  docker-compose.yaml  dockerfile  env_file  inventory.tftpl  main.tf  outputs.tf  pyproject.toml  varriables.tf  versions.tf
.ci/: ansible-lint  pre-commit-config.yaml
.github/workflows/: Deploy.yaml  Destroy.yaml  Pre-commit.yaml  ansibble.yaml  ansible.yaml  build_dev.yaml
airflow/: requirements
ansible/: ansible.cfg  key.pem  playbook.yml
ansible/collection/: requirements.yml
ansible/group_vars/all/: main.yml
ansible/roles/airflow_deps/defaults/: main.yml
ansible/roles/airflow_deps/tasks/: main.yml
ansible/roles/airflow_deps/templates/: airflow.sh.j2
ansible/roles/deploy_stack/tasks/: main.yml
ansible/roles/deploy_stack/templates/: dbseed.sql.j2
ansible/roles/install_docker/handlers/: main.yml
ansible/roles/install_docker/tasks/: Debian.yml  RedHat.yml  main.yml
ansible/roles/install_docker/templates/: config.json.j2
ansible/roles/render_compose/defaults/: main.yml
ansible/roles/render_compose/tasks/: main.yml
ansible/roles/render_compose/templates/: docker-compose.yml.j2
ansible/roles/update_system/tasks/: main.yaml  update_centos.yaml  update_ubuntu.yaml
