[tool.poetry]
name = "airflow-do"
version = "0.1.0"
description = "Airflow deployment"
authors = ["Roman <mmm.romka@gmail.com>"]
license = "GPL"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
pre-commit = "^3.3.3"
commitizen = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
